Fix problems with FieldHelp tooltip overflow. Tooltips from time to time overflow container borders. Fixes: https://github.com/oVirt/ovirt-web-ui/issues/568 https://github.com/oVirt/ovirt-web-ui/issues/422

--- a/src/components/FieldHelp/style.css
+++ b/src/components/FieldHelp/style.css
@@ -9,6 +9,10 @@
     line-height: 95%;
 }
 
+.field-text:focus {
+    outline: 0px solid transparent;
+}
+
 .field-help-min-width {
 	min-width: 150px;
 	width: max-content;
